--- a/src/main/resources/views/PaneProximamente.fxml
+++ b/src/main/resources/views/PaneProximamente.fxml
@@ -91,12 +91,12 @@
                                     <Insets bottom="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <Label alignment="TOP_LEFT" prefHeight="100.0" prefWidth="409.0" text="Información sobre la película o serie" textFill="WHITE" wrapText="true">
+                              <Label fx:id="lblInfo10" alignment="TOP_LEFT" prefHeight="100.0" prefWidth="409.0" text="Información sobre la película o serie" textFill="WHITE" wrapText="true">
                                  <font>
                                     <Font name="System Bold" size="16.0" />
                                  </font>
                               </Label>
-                              <Label prefWidth="405.0" text="Género" textFill="WHITE">
+                              <Label fx:id="lblGenero10" prefWidth="405.0" text="Género" textFill="WHITE">
                                  <font>
                                     <Font name="System Bold" size="16.0" />
                                  </font>
