--- a/src/main/resources/views/PaneUsuario.fxml
+++ b/src/main/resources/views/PaneUsuario.fxml
@@ -53,12 +53,12 @@
                                           <Insets bottom="5.0" />
                                        </padding>
                                     </Label>
-                                    <Label fx:id="lblMiembrodesde" prefHeight="26.0" prefWidth="326.0" text="Miembro desde el {dia} de {mes} del {año}" textFill="WHITE">
+                                    <Label fx:id="lblMiembroDesde" prefHeight="26.0" prefWidth="326.0" text="Miembro desde el {dia} de {mes} del {año}" textFill="WHITE">
                                        <font>
                                           <Font name="System Bold" size="16.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="lblTNumTitulosLista" text="En lista: {num} títulos" textFill="WHITE">
+                                    <Label fx:id="lblNumeroDeTitulosGuardados" text="En lista: {num} títulos" textFill="WHITE">
                                        <font>
                                           <Font name="System Bold" size="16.0" />
                                        </font>
@@ -202,7 +202,7 @@
                                           </Label>
                                           <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                              <children>
-                                                <HBox fx:id="hBoxDispositivo1" prefHeight="30.0" prefWidth="200.0">
+                                                <HBox prefHeight="30.0" prefWidth="200.0">
                                                    <children>
                                                       <ImageView fx:id="imgDispositivo1" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                                                          <image>
@@ -224,7 +224,7 @@
                                                       </Label>
                                                    </children>
                                                 </HBox>
-                                                <HBox fx:id="hBoxDispositivo2" layoutX="10.0" layoutY="10.0" prefHeight="30.0" prefWidth="200.0">
+                                                <HBox layoutX="10.0" layoutY="10.0" prefHeight="30.0" prefWidth="200.0">
                                                    <children>
                                                       <ImageView fx:id="imgDispositivo2" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                                                          <image>
@@ -246,7 +246,7 @@
                                                       </Label>
                                                    </children>
                                                 </HBox>
-                                                <HBox fx:id="hBoxDispositivo3" layoutX="10.0" layoutY="40.0" prefHeight="30.0" prefWidth="200.0">
+                                                <HBox layoutX="10.0" layoutY="40.0" prefHeight="30.0" prefWidth="200.0">
                                                    <children>
                                                       <ImageView fx:id="imgDispositivo3" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                                                          <image>
@@ -268,7 +268,7 @@
                                                       </Label>
                                                    </children>
                                                 </HBox>
-                                                <HBox fx:id="hBoxDispositivo1111" layoutX="10.0" layoutY="70.0" prefHeight="30.0" prefWidth="200.0">
+                                                <HBox layoutX="10.0" layoutY="70.0" prefHeight="30.0" prefWidth="200.0">
                                                    <children>
                                                       <ImageView fx:id="imgDispositivo4" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                                                          <image>
