--- a/src/main/resources/views/PantallaModelo.fxml
+++ b/src/main/resources/views/PantallaModelo.fxml
@@ -15,9 +15,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="982.0" prefWidth="1512.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PantallaModeloController">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="720.0" minWidth="1280.0" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PantallaModeloController">
    <top>
-      <GridPane fx:id="paneHeader" minHeight="80.0" prefWidth="100.0" style="-fx-background-color: black;" BorderPane.alignment="CENTER">
+      <GridPane fx:id="paneHeader" minHeight="100.0" minWidth="1920.0" prefHeight="100.0" prefWidth="1920.0" style="-fx-background-color: black;" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" />
@@ -114,7 +114,7 @@
       </GridPane>
    </top>
    <left>
-      <ToolBar maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="502.0" prefWidth="250.0" style="-fx-background-color: white;" BorderPane.alignment="TOP_LEFT">
+      <ToolBar maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="502.0" minWidth="250.0" prefHeight="502.0" prefWidth="250.0" style="-fx-background-color: white;" BorderPane.alignment="TOP_LEFT">
          <padding>
             <Insets bottom="20.0" left="10.0" right="10.0" top="20.0" />
          </padding>
@@ -178,6 +178,6 @@
       </ToolBar>
    </left>
    <center>
-      <Pane fx:id="centralPane" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #E9E9E9;" BorderPane.alignment="TOP_CENTER" />
+      <Pane fx:id="centralPane" minHeight="620.0" minWidth="1030.0" prefHeight="980.0" prefWidth="1670.0" style="-fx-background-color: #E9E9E9;" BorderPane.alignment="TOP_CENTER" />
    </center>
 </BorderPane>
