--- a/src/main/resources/views/PaneProximamente.fxml
+++ b/src/main/resources/views/PaneProximamente.fxml
@@ -14,7 +14,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneProximamenteController">
    <children>
-      <HBox alignment="TOP_CENTER" layoutX="116.4000015258789" layoutY="54.400001525878906" style="-fx-background-color: #3B3B3B; -fx-background-radius: 12;">
+      <HBox alignment="TOP_CENTER" layoutX="116.4000015258789" layoutY="54.400001525878906" minHeight="620.0" minWidth="1030.0" prefHeight="980.0" prefWidth="1670.0" style="-fx-background-color: #3B3B3B; -fx-background-radius: 12;" AnchorPane.topAnchor="0.0">
          <children>
             <GridPane alignment="TOP_CENTER" prefHeight="730.0" prefWidth="1115.0">
               <columnConstraints>
