--- a/src/main/resources/views/PaneUsuario.fxml
+++ b/src/main/resources/views/PaneUsuario.fxml
@@ -18,7 +18,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneUsuarioController">
    <children>
-      <VBox alignment="TOP_CENTER" style="-fx-background-color: #E9E9E9;">
+      <VBox alignment="TOP_CENTER" minHeight="620.0" minWidth="1030.0" prefHeight="980.0" prefWidth="1670.0" style="-fx-background-color: #E9E9E9;" AnchorPane.topAnchor="0.0">
          <children>
             <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #3B3B3B; -fx-background-radius: 8;">
                <VBox.margin>
