--- a/src/main/resources/views/PaneInicio.fxml
+++ b/src/main/resources/views/PaneInicio.fxml
@@ -91,45 +91,14 @@
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
-                     <image>
-                        <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                     </image>
                   </ImageView>
-                  <ImageView fx:id="imgObra02" fitHeight="190.0" fitWidth="115.0" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                     <image>
-                        <Image url="@../images/examples/ejemploPosterSerie.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="imgObra03" fitHeight="190.0" fitWidth="115.0" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                     <image>
-                        <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="imgObra04" fitHeight="190.0" fitWidth="115.0" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                     <image>
-                        <Image url="@../images/examples/ejemploPosterSerie.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="imgObra05" fitHeight="190.0" fitWidth="115.0" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                     <image>
-                        <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="imgObra06" fitHeight="190.0" fitWidth="115.0" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                     <image>
-                        <Image url="@../images/examples/ejemploPosterSerie.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="imgObra07" fitHeight="190.0" fitWidth="115.0" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                     <image>
-                        <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="imgObra08" fitHeight="190.0" fitWidth="115.0" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                     <image>
-                        <Image url="@../images/examples/ejemploPosterSerie.jpg" />
-                     </image>
-                  </ImageView>
+                  <ImageView fx:id="imgObra02" fitHeight="190.0" fitWidth="115.0" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                  <ImageView fx:id="imgObra03" fitHeight="190.0" fitWidth="115.0" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                  <ImageView fx:id="imgObra04" fitHeight="190.0" fitWidth="115.0" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                  <ImageView fx:id="imgObra05" fitHeight="190.0" fitWidth="115.0" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                  <ImageView fx:id="imgObra06" fitHeight="190.0" fitWidth="115.0" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                  <ImageView fx:id="imgObra07" fitHeight="190.0" fitWidth="115.0" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                  <ImageView fx:id="imgObra08" fitHeight="190.0" fitWidth="115.0" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                </children>
                <VBox.margin>
                   <Insets bottom="50.0" left="50.0" right="50.0" />
