--- a/src/main/resources/views/PaneBusqueda.fxml
+++ b/src/main/resources/views/PaneBusqueda.fxml
@@ -40,7 +40,7 @@
                               <RowConstraints maxHeight="25.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <TextField fx:id="txtBusqueda" alignment="CENTER_RIGHT" onKeyPressed="#buscarKeyPressed" prefHeight="26.0" prefWidth="658.0" promptText="Búsqueda Avanzada ▼" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <TextField fx:id="txtBusqueda" alignment="CENTER_RIGHT"  prefHeight="26.0" prefWidth="658.0" promptText="Búsqueda Avanzada ▼" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                               <ImageView fx:id="btnBuscar" fitHeight="30.0" fitWidth="30.0" onMouseClicked="#btnBuscarClicked" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                  <image>
                                     <Image url="@../images/others/search.png" />
