--- a/src/main/resources/views/PaneProximamente.fxml
+++ b/src/main/resources/views/PaneProximamente.fxml
@@ -14,9 +14,9 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneProximamenteController">
    <children>
-      <HBox alignment="TOP_CENTER" layoutX="116.4000015258789" layoutY="54.400001525878906" minHeight="620.0" minWidth="1030.0" prefHeight="980.0" prefWidth="1670.0" style="-fx-background-color: #3B3B3B; -fx-background-radius: 12;" AnchorPane.topAnchor="0.0">
+      <VBox alignment="TOP_CENTER" minHeight="620.0" minWidth="1030.0" prefHeight="980.0" prefWidth="1670.0" style="-fx-background-color: #3B3B3B; -fx-background-radius: 8;" AnchorPane.topAnchor="0.0">
          <children>
-            <GridPane alignment="TOP_CENTER" prefHeight="730.0" prefWidth="1115.0">
+            <GridPane alignment="TOP_CENTER" hgap="20.0" vgap="15.0" VBox.vgrow="ALWAYS">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -25,11 +25,12 @@
                 <RowConstraints minHeight="10.0" prefHeight="220.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="220.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="220.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="220.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <children>
-                        <ImageView fx:id="imgPoster00" fitHeight="200.0" fitWidth="140.0" onMouseClicked="#goToTitulo" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="imgPoster00" fitHeight="200.0" fitWidth="140.0" onMouseClicked="#goToTitulo" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                            <image>
                               <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
                            </image>
@@ -71,7 +72,7 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <children>
-                        <ImageView fx:id="imgPoster10" fitHeight="200.0" fitWidth="140.0" onMouseClicked="#goToTitulo" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="imgPoster10" fitHeight="200.0" fitWidth="140.0" onMouseClicked="#goToTitulo" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                            <image>
                               <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
                            </image>
@@ -110,7 +111,7 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <children>
-                        <ImageView fx:id="imgPoster01" fitHeight="200.0" fitWidth="140.0" onMouseClicked="#goToTitulo" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="imgPoster01" fitHeight="200.0" fitWidth="140.0" onMouseClicked="#goToTitulo" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                            <image>
                               <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
                            </image>
@@ -149,7 +150,7 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <children>
-                        <ImageView fx:id="imgPoster11" fitHeight="200.0" fitWidth="140.0" onMouseClicked="#goToTitulo" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="imgPoster11" fitHeight="200.0" fitWidth="140.0" onMouseClicked="#goToTitulo" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                            <image>
                               <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
                            </image>
@@ -188,7 +189,7 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <children>
-                        <ImageView fx:id="imgPoster02" fitHeight="200.0" fitWidth="140.0" onMouseClicked="#goToTitulo" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="imgPoster02" fitHeight="200.0" fitWidth="140.0" onMouseClicked="#goToTitulo" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                            <image>
                               <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
                            </image>
@@ -227,7 +228,7 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <children>
-                        <ImageView fx:id="imgPoster12" fitHeight="200.0" fitWidth="140.0" onMouseClicked="#goToTitulo" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="imgPoster12" fitHeight="200.0" fitWidth="140.0" onMouseClicked="#goToTitulo" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                            <image>
                               <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
                            </image>
@@ -264,13 +265,91 @@
                         </VBox>
                      </children>
                   </HBox>
+                  <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="3">
+                     <children>
+                        <ImageView fx:id="imgPoster30" fitHeight="200.0" fitWidth="140.0" onMouseClicked="#goToTitulo" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
+                           <image>
+                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
+                           </image>
+                        </ImageView>
+                        <VBox prefHeight="202.0" prefWidth="455.0">
+                           <children>
+                              <Label fx:id="lblFecha30" prefWidth="405.0" text="01/01/2024" textFill="WHITE">
+                                 <font>
+                                    <Font name="System Bold" size="16.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="lblTitulo30" prefWidth="405.0" text="Título" textFill="WHITE">
+                                 <font>
+                                    <Font name="System Bold" size="20.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Label fx:id="lblInfo30" alignment="TOP_LEFT" prefHeight="100.0" prefWidth="409.0" text="Información sobre la película o serie" textFill="WHITE" wrapText="true">
+                                 <font>
+                                    <Font name="System Bold" size="16.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="lblGenero30" prefWidth="405.0" text="Género" textFill="WHITE">
+                                 <font>
+                                    <Font name="System Bold" size="16.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="30.0" top="5.0" />
+                           </HBox.margin>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                     <children>
+                        <ImageView fx:id="imgPoster30" fitHeight="200.0" fitWidth="140.0" onMouseClicked="#goToTitulo" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
+                           <image>
+                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
+                           </image>
+                        </ImageView>
+                        <VBox prefHeight="202.0" prefWidth="455.0">
+                           <children>
+                              <Label fx:id="lblFecha30" prefWidth="405.0" text="01/01/2024" textFill="WHITE">
+                                 <font>
+                                    <Font name="System Bold" size="16.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="lblTitulo30" prefWidth="405.0" text="Título" textFill="WHITE">
+                                 <font>
+                                    <Font name="System Bold" size="20.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Label fx:id="lblInfo30" alignment="TOP_LEFT" prefHeight="100.0" prefWidth="409.0" text="Información sobre la película o serie" textFill="WHITE" wrapText="true">
+                                 <font>
+                                    <Font name="System Bold" size="16.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="lblGenero30" prefWidth="405.0" text="Género" textFill="WHITE">
+                                 <font>
+                                    <Font name="System Bold" size="16.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="30.0" top="5.0" />
+                           </HBox.margin>
+                        </VBox>
+                     </children>
+                  </HBox>
                </children>
+               <VBox.margin>
+                  <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+               </VBox.margin>
             </GridPane>
          </children>
-         <padding>
-            <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
-         </padding>
-      </HBox>
+      </VBox>
    </children>
    <padding>
       <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
